--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -17,7 +17,7 @@ $gray: #6b7886;
 $white: #fff;
 
 //////////////// 2. Dark Colors /////////////////
-$dark-text-base-color: #babdc4;
+$dark-text-base-color: #d0d4dc;
 $dark-text-link-blue: #77a8fd;
 $dark-text-link-blue-active: #5292ff;
 $dark-bloquote-border: #4a4d56;
